--- a/homeworks/hw1/hw1.ipynb
+++ b/homeworks/hw1/hw1.ipynb
@@ -1472,7 +1472,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10: 100%|██████████| 469/469 [04:14<00:00,  1.84batch/s, batch_loss=0.1692]\n"
+      "Epoch 1/10: 100%|██████████| 469/469 [04:14<00:00,  1.84batch/s, batch_loss=0.1692]\n",
+      "Epoch 2/10: 100%|██████████| 469/469 [04:14<00:00,  1.84batch/s, batch_loss=0.1430]\n",
+      "Epoch 3/10: 100%|██████████| 469/469 [04:14<00:00,  1.84batch/s, batch_loss=0.0825]\n"
      ]
     }
    ],
